Animated image textures in Eevee don't work until save/load of .blend #61825

Closed
opened 2019-02-21 22:49:23 +01:00 by Gavin Scott · 3 comments

System Information
Windows 10, Nvidia 1060

Blender Version
Broken:
Current 2.80 master and yesterday's nightly build.

Short description of error
Animated movie file textures don't work. Saving and loading the .blend causes it to start working.

Initially reported by a user in: https://blenderartists.org/t/movie-texture-animations-now-possible/1147808 and I reproduced it here.

Exact steps for others to reproduce the error

  1. Start 2.80 with the default scene.
  2. Split the 3d view in half, set one half to the Shader Editor.
  3. Add an Image Texture node. Connect the color output to the base color of the Principled Shader node.
  4. Open a movie file (I tested with: he first one from https://sample-videos.com/)
  5. In the node properties for the Image Texture in the shader editor, press the [Match Movie Length] button and check the Auto Refresh box.
  6. Switch the 3dview to Rendered mode.
  7. Press play on the timeline. The texture does not animate. If you position the play head to somewhere in the frame range of the movie and then change the image node properties (toggle the Cycle checkbox etc.) then the texture will update to that frame, but still will not change if you play the timeline.
  8. If you save the .blend file and re-open it (and switch the 3dview to Rendered mode again), then it will start working and always update in the viewport as the current frame changes.

The original reporting user confirms that this fixes the problem for him too.

**System Information** Windows 10, Nvidia 1060 **Blender Version** Broken: Current 2.80 master and yesterday's nightly build. **Short description of error** Animated movie file textures don't work. Saving and loading the .blend causes it to start working. Initially reported by a user in: https://blenderartists.org/t/movie-texture-animations-now-possible/1147808 and I reproduced it here. **Exact steps for others to reproduce the error** 1) Start 2.80 with the default scene. 2) Split the 3d view in half, set one half to the Shader Editor. 3) Add an Image Texture node. Connect the color output to the base color of the Principled Shader node. 4) Open a movie file (I tested with: he first one from https://sample-videos.com/) 5) In the node properties for the Image Texture in the shader editor, press the [Match Movie Length] button and check the Auto Refresh box. 6) Switch the 3dview to Rendered mode. 7) Press play on the timeline. The texture does not animate. If you position the play head to somewhere in the frame range of the movie and then change the image node properties (toggle the Cycle checkbox etc.) then the texture will update to that frame, but still will not change if you play the timeline. 8) If you save the .blend file and re-open it (and switch the 3dview to Rendered mode again), then it will start working and always update in the viewport as the current frame changes. The original reporting user confirms that this fixes the problem for him too.
Author

Added subscriber: @GavinScott

Added subscriber: @GavinScott
Brecht Van Lommel was assigned by Sebastian Parborg 2019-02-22 12:57:41 +01:00

This issue was referenced by 795effcbc8

This issue was referenced by 795effcbc815ae8c54bf59d31f3315a46e576c86

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61825
No description provided.