Fix T61825: animated images not working immediately when enabling auto refresh.